kube/deploy/apps/paperless-ngx/app/authentik.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx-authentik
  namespace: authentik
spec:
  ingressClassName: nginx
  rules:
    - host: &host "${APP_DNS_PAPERLESS_NGX}"
      http:
        paths:
          - pathType: Prefix
            path: "/outpost.goauthentik.io"
            backend:
              service:
                name: authentik
                port:
                  name: http
  tls:
    - hosts:
        - *host
